# AI-Agent-Ticket-Triage-Auto-Routing-System

./: .env.example  .gitignore  AI_Ticket_Triage_Presentation.pptx  Project_Explanation.docx  pyproject.toml  requirements.txt
data/: edi_routing.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: DashboardPage.tsx  MetricsPage.tsx  ReviewQueuePage.tsx  TicketTablePage.tsx  UploadPage.tsx
input/: sample_tickets.xlsx
monitoring/: prometheus.yml
scripts/: generate_architecture.py  generate_docx.py  generate_presentation.py  generate_routing_config.py  generate_sample_data.py  generate_sample_tickets.py  generate_training_data.py  presentation_script.txt
src/agents/: base_agent.py  classifier_agent.py  confidence_agent.py  feedback_agent.py  priority_agent.py  routing_agent.py
src/api/: main.py
src/api/routes/: approvals.py  feedback.py  metrics.py  tickets.py
src/config/: settings.py
src/database/: connection.py  models.py
src/ml/: evaluator.py  model_loader.py  trainer.py
src/notifications/: email_service.py
src/notifications/templates/: auto_route.html  flagged_digest.html
src/pipeline/: excel_pipeline.py  folder_runner.py  orchestrator.py
tests/: test_core.py
